fix: wrap styles

--- a/src/scss/components/_wrap.scss
+++ b/src/scss/components/_wrap.scss
@@ -2,8 +2,8 @@
   position: relative;
 
   display: grid;
-  grid-template-rows: 5% minmax(400px, 768px) 5%;
-  grid-template-columns: 3% minmax(200px, 415px) 7%;
+  grid-template-rows: 3% minmax(400px, 768px) 7%;
+  grid-template-columns: 5% minmax(200px, 415px) 5%;
   align-content: center;
   justify-content: center;
 
