--- a/src/style/main.css
+++ b/src/style/main.css
@@ -385,10 +385,10 @@ li {
   position: relative;
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: 5% minmax(400px, 768px) 5%;
-      grid-template-rows: 5% minmax(400px, 768px) 5%;
-  -ms-grid-columns: 3% minmax(200px, 415px) 7%;
-      grid-template-columns: 3% minmax(200px, 415px) 7%;
+  -ms-grid-rows: 3% minmax(400px, 768px) 7%;
+      grid-template-rows: 3% minmax(400px, 768px) 7%;
+  -ms-grid-columns: 5% minmax(200px, 415px) 5%;
+      grid-template-columns: 5% minmax(200px, 415px) 5%;
   -ms-flex-line-pack: center;
       align-content: center;
   -webkit-box-pack: center;
